--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,35 @@
 {
   "compilerOptions": {
     "target": "ES5",                                     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "lib": ["es6"],                                      /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    
+
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
+    "moduleResolution": "node",
     "rootDir": "src",                                    /* Specify the root folder within your source files. */                            /* List of file name suffixes to search when resolving a module. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
-
+    "typeRoots": [
+      "./node_moudles/@types",
+      "./src/define"
+    ],
     /* JavaScript Support */
     "allowJs": true,                                     /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
-    "outDir": "build",                                   /* Specify an output folder for all emitted files. */
+    "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+    "forceConsistentCasingInFileNames": true,    
+    "sourceMap": true,                                   /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     /* Completeness */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
