--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,    
-    "sourceMap": true,                                   /* Ensure that casing is correct in imports. */
-
+    "sourceMap": true,    
+    "lib": ["es2015", "es2016", "es2017", "es2018", "es2019", "es2020", "es2021", "es2022"],
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
