--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
@@ -41,6 +43,8 @@
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.8",
